# practiso_sdk

./: pyproject.toml
practiso_sdk/: archive.py  build.py
practiso_sdk/google/: ai.py
tests/: __init__.py  archive_test.py  test_archive.py  test_build.py  test_vectorize.py
