[tool.poetry]
name = "practiso-sdk"
version = "0.1.0"
description = ""
authors = ["zhufucdev <zhufuzhufu1@gmail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
google-generativeai = "^0.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
